--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,5 @@
+# make sure run the back-end successfully before using this config
 VITE_API_BASE_URL=http://localhost:5003
+
+# for pure front-end developers without a back-end api served, this config will serve the static json response from the /public/api folder of this same front-end app
+# VITE_API_BASE_URL=http://localhost:5173
